<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileDriverFragment">

    <TextView
        android:id="@+id/textView_DriverName"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/textViewStName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_DriverEmail"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/textViewStEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/textView_DriverName" />

    <TextView
        android:id="@+id/textView_DriverTelefono"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/textViewStNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/textView_DriverEmail" />

    <Button
        android:id="@+id/buttonContinuarDriver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/buttonCerrarSesion"
        android:textAllCaps="true"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_DriverTelefono" />

    <Button
        android:id="@+id/buttonEliminarDatosDriver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="400dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/buttonEliminarDatos"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonContinuarDriver" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>