<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.polimove.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_routes"
        android:name="com.example.polimove.ui.routes.RoutesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_routes" >
        <action
            android:id="@+id/action_navigation_routes_to_routeDetails"
            app:destination="@id/routeDetails"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
        />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.polimove.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/routeDetails"
        android:name="com.example.polimove.ui.routeDetails.RouteDetails"
        android:label="Detalle de ruta"
        tools:layout="@layout/fragment_route_details" >
        <action
            android:id="@+id/action_routeDetails_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>