<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="25dp"
        android:text="@string/textViewTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle2"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="25dp"
        android:text="Estudiante"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQRCODE" />

    <TextView
        android:id="@+id/textViewNameStd"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:text="@string/textViewNameStd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle2" />
    <!--
    <TextView
        android:id="@+id/textViewAsiento"
        android:layout_width="132dp"
        android:layout_height="31dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="61dp"
        android:text="Asiento asignado:"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewNumberAsiento"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameStd" />

    <TextView
        android:id="@+id/textViewNumberAsiento"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="212dp"
        android:text="@string/textViewNumberAsiento"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameStd" />
        -->

    <TextView
        android:id="@+id/textViewQRCODE"
        android:layout_width="281dp"
        android:layout_height="272dp"
        android:layout_marginTop="21dp"
        android:text="@string/textViewQRCODE"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <Button
        android:id="@+id/buttonContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/buttonContinuar"
        android:textAllCaps="true"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAsiento" />
</androidx.constraintlayout.widget.ConstraintLayout>